<resources>
    <string name="app_name">微生活</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">微生活</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="describ">description</string>
    <string name="pw">密码</string>
    <string name="mail">手机号</string>
    <string name="remember">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="new_usr">新用户？</string>
    <string name="wx_usr">微信登录</string>
    <string name="name">用户名</string>
    <string name="pw2">确认密码</string>
    <string name="title_activity_device">设备</string>
    <string name="temp">15°</string>
    <string name="state">状态</string>
    <string name="place">地点</string>
    <string name="add_dev">添加设备</string>
    <string name="online">在线</string>
    <string name="offline">已离线</string>
    <string name="gate_imei_text">网关的序列号: (可扫描二维码获取)</string>
    <string name="gate_name_text">请给您的网关起个名字:</string>
    <string name="device_name_text">请给您的设备起个名字:</string>
    <string name="gate_name_1">我的设备</string>
    <string name="gate_name_2">我家主控</string>
    <string name="gate_name_3">客厅网关</string>
    <string name="mode">更改模式</string>
    <string name="title_activity_gate_bind">绑定网关</string>
    <string name="add">添加</string>
    <string name="no_gate">您还没有绑定网关，请点击 “+” 绑定网关</string>
    <string name="no_device">您还没有此类设备，请点击 “+” 添加</string>
    <string name="title">title</string>
    <string name="summary">summary</string>
    <string name="line">is online ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="envir_frag">环境 Fragment</string>
    <string name="plug_frag">插座 fragment</string>
    <string name="light_frag">光照 Fragment</string>
    <string name="msg_frag">消息 Fragment</string>
    <string name="weather">天气</string>
    <string name="device">设备</string>
    <string name="bind_gate">绑定网关</string>
    <string name="about">关于</string>
    <string name="about_sum">关于</string>
    <string name="statistics">查看统计</string>
    <string name="temp_sub">温度</string>
    <string name="humi_sub">湿度</string>
    <string name="light_sub">光照</string>
    <string name="zero">0</string>
    <string name="device_imei_text">设备的序列号: (可扫描二维码获取)</string>
    <string name="device_name_1">客厅-</string>
    <string name="device_name_2">卧室-</string>
    <string name="device_name_3">书房-</string>
    <string name="device_type">设备类型: </string>
    <string name="welcome">欢迎</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="reg_error">注册失败</string>
    <string name="register">注册</string>
    <string name="my_device">设备控制</string>
    <string name="title_activity_add_device">添加设备</string>
    <string name="action_rename">重命名</string>
    <string name="action_delete">删除</string>
    <string name="action_position">更改位置</string>
    <string name="camera">查看监控</string>
    <string name="gate">网关</string>
    <string name="title_activity_msg">消息</string>
    <string name="action_all">全部</string>
    <string name="action_sys">系统</string>
    <string name="action_envir">环境</string>
    <string name="action_security">防盗</string>
    <string name="title_activity_settings">设置</string>
    <string name="auto_login_sum">是否自动登录</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="settings_account">账户管理</string>
    <string name="settings_general">通用设置</string>
    <string name="clear_pw">清除密码</string>
    <string name="clear_pw_summary">清除保存的密码</string>
    <string name="settings_wx">微信公众号</string>
    <string name="quit">退出登录</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="settings_sys">系统设置</string>
    <string name="settings_voice">语音命令</string>
    <string name="settings_voice_summary">语音命令列表与自定义</string>
    <string name="settings_member">家庭成员</string>
    <string name="settings_member_summary">家庭成员查看、删除(管理员功能)与通话</string>
    <string name="settings_account_summary">更改手机号 用户名 密码</string>
    <string name="test">测试</string>
    <string name="title_activity_feedback">反馈</string>
    <string name="suggest">反馈内容</string>
    <string name="suggest_con">QQ号/微信号/手机号</string>
    <string name="submit">发送</string>
    <string name="mode_btn">模式</string>
    <string name="wind_btn">风级</string>
    <string name="power_btn">打开</string>
    <string name="power_text">关</string>
    <string name="mode_text">自动模式</string>
    <string name="wind_text">1</string>
    <string name="change_mode">更改模式</string>
    <string name="settings_graph">分布图</string>
    <string name="settings_graph_summary">更改您的房间分布图</string>
</resources>