<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_sys">

        <Preference
            android:key="voice"
            android:title="@string/settings_voice"
            android:summary="@string/settings_voice_summary"/>
        <Preference
            android:key="graph"
            android:title="@string/settings_graph"
            android:summary="@string/settings_graph_summary"/>
        <Preference
            android:key="member"
            android:title="@string/settings_member"
            android:summary="@string/settings_member_summary"/>
        <Preference
            android:key="account"
            android:title="@string/settings_account"
            android:summary="@string/settings_account_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_general">
        <CheckBoxPreference
            android:key="auto_login"
            android:title="@string/auto_login"
            android:summary="@string/auto_login_sum" />
        <Preference
            android:key="clear"
            android:title="@string/clear_pw"
            android:summary="@string/clear_pw_summary"/>
        <Preference
            android:key="wx"
            android:title="@string/settings_wx"/>
        <!--<Preference-->
            <!--android:key="share"-->
            <!--android:title="@string/share"/>-->
        <Preference
            android:key="feedback"
            android:title="@string/title_activity_feedback"/>

        <!--<Preference-->
            <!--android:key="help"-->
            <!--android:title="@string/help"/>-->
        <Preference
            android:key="about"
            android:title="@string/about"/>
        <!--<Preference-->
            <!--android:key="update"-->
            <!--android:title="@string/update"/>-->
        <Preference
            android:key="quit"
            android:title="@string/quit"/>



    </PreferenceCategory>



</PreferenceScreen>