<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jlshix.wlife_v03.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

        <RelativeLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.jlshix.wlife_v03.tool.RoundImageView
                android:id="@+id/head"
                android:src="@mipmap/ic_launcher"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/describ"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:id="@+id/number"
                android:layout_below="@id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/mail"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pw"
                        android:inputType="textPassword" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/checkboxes"
                android:layout_below="@id/number"
                style="@style/margin_s_e_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/remember"
                    android:text="@string/remember"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/auto_login"
                    android:text="@string/auto_login"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:layout_below="@id/checkboxes"
                style="@style/margin_s_e_t"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/btn_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    <Button
        android:id="@+id/new_usr"
        android:text="@string/new_usr"
        android:layout_alignParentBottom="true"
        android:textColor="#74ABDC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null" />
    <Button
        android:id="@+id/wx_usr"
        android:text="@string/wx_usr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="#74ABDC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null" />


</RelativeLayout>
