<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name"
            android:text="@string/about"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:paddingTop="5dp"
            android:id="@+id/dt"
            android:text="@string/about_sum"
            android:textSize="12sp"
            android:textColor="@color/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:id="@+id/content"
        android:layout_marginStart="@dimen/msg_margin"
        android:textSize="18sp"
        android:text="@string/large_text"
        android:maxLines="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>