<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/temp"
        android:text="@string/temp"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/state"
            android:text="@string/state"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/place"
            android:text="@string/place"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <Space
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/weather_pic"
        android:src="@drawable/clear_day"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent" />



</LinearLayout>