<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/item_padding"
    app:cardElevation="@dimen/card_elevation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/place_and_menu"/>

        <LinearLayout
            android:id="@+id/parent"
            android:orientation="vertical"
            android:padding="@dimen/action_button_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/power_text"
                    android:textSize="@dimen/air_text"
                    android:padding="@dimen/item_padding"
                    android:gravity="center"
                    android:text="@string/power_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/mode_text"
                    android:textSize="@dimen/air_text"
                    android:padding="@dimen/item_padding"
                    android:gravity="center"
                    android:text="@string/mode_text"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/wind_text"
                    android:textSize="@dimen/air_text"
                    android:padding="@dimen/item_padding"
                    android:gravity="center"
                    android:text="@string/wind_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:padding="@dimen/item_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/power_btn"
                    android:background="@drawable/btn_selector"
                    style="?android:buttonBarButtonStyle"
                    android:text="@string/power_btn"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/item_padding"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/mode_btn"
                    android:background="@drawable/btn_selector"
                    style="?android:buttonBarButtonStyle"
                    android:text="@string/mode_btn"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/item_padding"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/wind_btn"
                    android:background="@drawable/btn_selector"
                    style="?android:buttonBarButtonStyle"
                    android:text="@string/wind_btn"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/item_padding"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <SeekBar
                    android:layout_gravity="center"
                    android:id="@+id/seek"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:max="14"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/value"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

