<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:padding="@dimen/card_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:id="@+id/place"
            android:text="@string/device"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="36dp" />
        <Button
            android:id="@+id/menu_gate"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/ic_more_horiz_grey_500_24dp"
            android:background="@null"
            android:layout_width="36dp"
            android:layout_height="36dp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/device"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:minHeight="?android:listPreferredItemHeight"
        android:orientation="horizontal">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/line"
                android:src="@drawable/gate_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_marginStart="@dimen/space_dimen"
                android:layout_toEndOf="@id/line"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textColor="@color/item_color"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/summary"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mode"
            android:text="@string/change_mode"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/action_button_margin"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/camera"
            android:text="@string/camera"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/action_button_margin"
            android:layout_height="wrap_content" />



    </LinearLayout>


</LinearLayout>