<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jlshix.wlife_v03.activity.FeedbackActivity"
    tools:showIn="@layout/activity_feedback">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/suggest_float_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/suggest_con"
            android:hint="@string/suggest"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/suggest_float_2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/suggest_float_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/suggest_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggest_con"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/suggest_btn"
        android:layout_below="@id/suggest_float_2"
        android:text="@string/submit"
        android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
